# scientific-writing-agent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/distill-feedback/: SKILL.md
.claude/skills/plan-paper/: SKILL.md
.claude/skills/review-manuscript/: SKILL.md
docs/: distillation-example.md  onboarding-snippet.md
evals/: README.md  run_bare_openweight.py  score.py
evals/data/: eval_manuscript.tex  ground_truth.json
evals/results/2026-06-11-claude-opus-4.8-pilot/: REPORT.md  matches_condA.json  matches_condB.json  matches_condC.json  raw_condA.json  raw_condB.json  raw_condC.txt
evals/results/2026-06-11-qwen3-8b-cpu/: REPORT.md  matches_condA.json  matches_condB.json  raw_condA_report.md  raw_condB.json
evals/results/2026-06-12-distill-test/: 2026-06-12-ci-4-cite-original-works.md  2026-06-12-fg-6-use-colorblind-safe-palettes.md  2026-06-12-lg-8-use-respectively-sparingly.md  2026-06-12-ma-5-check-dimensional-consistency.md  2026-06-12-st-6-quantify-claims.md  2026-06-12-st-7-avoid-repeating-abstract-in-conclusion.md  REPORT.md  input_feedback.txt
evals/results/2026-06-12-qwen3-32b-openrouter/: REPORT.md  (+4 more)
guidelines/: 00-meta.md  01-storyline.md  02-structure.md  03-language.md  04-mathematics.md  05-figures.md  06-citations.md  07-latex.md  08-before-writing.md  09-field-specific.md  README.md
guidelines/proposals/: README.md
src/swa/: __init__.py  bibliography.py  checks.py  cli.py  manuscript.py  mcp_server.py  report.py  rules.py
tests/: smoke.py
tests/data/: flawed_example.tex  flawed_refs.bib
(+3 files in other folders)
