[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scientific-writing-agent"
version = "0.1.0"
description = "Guideline-driven agent system for scientific writing and manuscript revision"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexander Hermann" }]
keywords = ["scientific-writing", "agent", "mcp", "langgraph", "manuscript-review"]

# Core (rule parsing + deterministic checks) is stdlib-only on purpose:
# it must run anywhere, including inside minimal CI jobs.
dependencies = []

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.2"]
agent = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "pydantic>=2",
]
all = ["scientific-writing-agent[mcp,agent]"]

[project.scripts]
swa = "swa.cli:main"
swa-mcp = "swa.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
swa = ["py.typed"]
